# c-mod-gen

./: README.md  pyproject.toml
c_mod_gen/: generate.py  render.py  reserved_keywords.py
c_mod_gen/templates/: header.j2  implementation.j2
src/c_mod_gen/: cli.py
tests/: test_cli.py  test_generate.py  test_render.py
